--- a/complex-react-app/package.json
+++ b/complex-react-app/package.json
@@ -19,7 +19,11 @@
     "immer": "^7.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^5.2.0",
+    "react-tooltip": "^4.2.8",
+    "react-transition-group": "^4.4.1",
+    "socket.io-client": "^2.3.0",
     "use-immer": "^0.4.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
